--- a/src/style/index.css
+++ b/src/style/index.css
@@ -115,6 +115,7 @@
   --gray-6:#c9c9c9;
   --gray-7:#dbdbdb;
   --proporcao-foto:1,196;
+  --padding-container:20px;
 }
 
 ul,
@@ -180,25 +181,31 @@ body {
   width: 100%; /* Largura fixa (pode ser ajustada) */
   max-width: 425px;
   min-width: 425px;
-  height: 100vh;
 }
 .component-div {
-  padding: 20px; /* Espaçamento interno */
+  padding: var(--padding-container); /* Espaçamento interno */
   border-radius: 8px; /* Bordas arredondadas */
   background-color: var(--gray-1);/* Cor cinza claro */
   box-shadow: 1px 1px 10px rgb(17, 17, 17);
+  margin: 4% 0px;
 }
 
 .subcomponents-div{
-    margin: 0px -14px;
+    margin: 12% calc(var(--padding-container) - 34px);
     background-color:var(--gray-2);
     border-radius: 8px;
     padding: 14px;
 }
 .components-list{
-  padding: 20px; /* Espaçamento interno */
+  padding: var(--padding-container); /* Espaçamento interno */
   border-radius: 8px; /* Bordas arredondadas */
   background-color: var(--gray-4); /* Cor cinza claro */
+}
+.footer{
+  margin:  12% calc(var(--padding-container) - 34px) calc(var(--padding-container) - 34px) calc(var(--padding-container) - 34px);
+  padding: calc(var(--padding-container) / 2);
+  border-radius: 8px; /* Bordas arredondadas */
+  
 }
 
 p{
@@ -216,6 +223,7 @@ img{
 
 h1{
   font-size: 2.5em;
+  margin: 2% 0px;
 }
 
 h2{
@@ -311,72 +319,37 @@ h2{
 .g-6{
   gap: 6px;
 }
-
-.m-top-36{
-  margin-top: 16%;
+.p-4-top{
+  padding-top : 4px
+}
+.p-4-bottom{
+  padding-bottom: 4px
 }
 
-.m-top-24{
-  margin-top: 12%;
+.p-4-6{
+  padding: 4px 6px;
 }
 
-.m-bottom-24{
-  margin-bottom: 12%;
+.p-6-10{
+  padding: 5px 9px;
 }
 
-
-.m-top-12{
-    margin-top: 6%;
+.m-bottom-4{
+  margin-bottom: 4%;
 }
+
 .m-top-6{
+  margin-top: 6%;
+}
+
+.m-top-8{
+  margin-top: 8%;
+}
+
+.m-top-4{
   margin-top: 4%;
 }
-.p-16{
-  padding-top: 16px;
-}
 
-.p-12{
-    padding-top: 14%;
-}
-
-.p-6{
-    padding-top: 10%;
-}
-
-.p-2{
-    padding-top: 3px;
-}
-
-.p-full-4{
-  padding: 4px;
-}
-
-.p-full-6{
-  padding: 6px;
-}
-.p-sides-4-8{
-  padding: 4px 12px;
-}
-
-.g-6{
-    gap: 6px;
-}
-
-.p-6-top-bottom{
-  padding: 6px 0px;
-}
-
-.p-36{
-    padding-top: 36px;
-}
-.m-bottom-n12 {
-    margin-bottom: -14px;
-}
-
-.m-6{
-  margin: 4% 0%;
-}
-
-.m-minus-6{
-  margin: -6% 0%;
+.m-top-12{
+  margin-top: 16%;
 }
